welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:1: error: type mismatch;
 found   : Unit
 required: Boolean
def sleepIn(weekday:Boolean, vacation:Boolean): Boolean = {}
                                                          ^